# tiggrow

./: .env.example  README.md  database.db  db.py  justfile  pyproject.toml  vs.code-workspace
alembic/: env.py
alembic/versions/: 56df425b62c4_initial_migration.py
just_tasks/: css.just
tiggrow_app/: dependency.py  main.py  models.py
tiggrow_app/init_data/: initial_encounters.json  initial_persons.json  initial_pets.json  load_initial_data_to_db.py
tiggrow_app/static/css/: output.css
tiggrow_app/static/src/: input.css
tiggrow_app/templates/: base.html
